# image-square-wizard

./: README.md  meson.build
doc/: isw.1
src/: isw_canvas.c  isw_canvas.h  main.c
tests/: run-cli-tests.sh
